lang2/macro/tests/ui/fail/01-constructor-returns.stderr
error: constructors in ink! must have no specified return type
  --> $DIR/01-constructor-returns.rs:15:27
   |
15 |         fn new(&mut self) -> Self {}
   |                           ^^^^^^^
